# ai-intake

./: .env.example  .gitignore  DESIGN.md  EXAMPLE_OUTPUT.md  GET_STARTED.md  NOTIFICATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SCRAPEGRAPH_MIGRATION.md  pyproject.toml  requirements.txt  rules.yaml  sources.yaml  topics.yaml
.claude/: settings.local.json
.github/workflows/: daily_digest.yml  weekly_digest.yml
scripts/: run_daily.sh  run_weekly.sh
src/: __init__.py  main.py
src/classify/: __init__.py
src/dedup/: __init__.py
src/ingest/: __init__.py  base.py  github_fetcher.py  models.py  news_search_fetcher.py  rss_fetcher.py
src/notify/: __init__.py  infographic.py
src/publish/: __init__.py
src/score/: __init__.py
src/storage/: __init__.py
src/summarize/: __init__.py
src/utils/: __init__.py  config.py  logger.py
tests/: test_news_search_fetcher.py
